# datadog-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
datadog_mcp/: server.py
datadog_mcp/utils/: datadog_client.py
tests/: conftest.py  test_auth.py  test_integration.py  test_logs.py  test_metrics.py  test_query_syntax_fix.py  test_server.py  test_teams.py  test_tools_working.py  test_traces.py
